--- a/public/javascripts/employee/personal/personal.html
+++ b/public/javascripts/employee/personal/personal.html
@@ -11,7 +11,7 @@
         <div class="form-group">
             <label class="col-lg-4">SSS No.</label>
             <div class="col-lg-8">
-                <input class="form-control" type="text"  ng-model="employee.sssNo" maxlength="10"></input>
+                <input class="form-control" type="text" ssn ng-model="employee.sssNo"></input>
             </div>
         </div>
         <div class="form-group">
@@ -29,7 +29,7 @@
         <div class="form-group">
             <label class="col-lg-4">TIN No.</label>
             <div class="col-lg-8">
-                <input class="form-control" type="text" ng-model="employee.taxNo" maxlength="12"></input>
+                <input class="form-control" type="text"  ng-model="employee.taxNo" maxlength="12"></input>
             </div>
         </div>  
         <div class="form-group">
@@ -77,7 +77,7 @@
         <div class="form-group">
             <label class="col-lg-4">Tax Status</label>
             <div class="col-lg-8">
-                <select class="form-control" ng-model="employee.textstatus_id" ng-options="tax.id as tax.taxcode for tax in taxes"></select>  
+                <select class="form-control" ng-model="employee.textstatus_id" ng-options="taxStat.id as taxStat.taxstatus for taxStat in taxes"></select>  
             </div>
         </div>
         <div class="form-group">
